commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46223,6 +46223,10 @@
     {
       "Date": "2022-12-05 15:00",
       "Rate": "19.7119"
+    },
+    {
+      "Date": "2022-12-05 16:00",
+      "Rate": "19.7351"
     }
   ]
 }
