commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46227,6 +46227,10 @@
     {
       "Date": "2022-12-05 16:00",
       "Rate": "19.7351"
+    },
+    {
+      "Date": "2022-12-05 17:00",
+      "Rate": "19.7351"
     }
   ]
 }
