--- a/indexRt.html
+++ b/indexRt.html
@@ -46231,6 +46231,10 @@
     {
       "Date": "2022-12-05 17:00",
       "Rate": "19.7351"
+    },
+    {
+      "Date": "2022-12-05 18:00",
+      "Rate": "19.7326"
     }
   ]
 }
