commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46235,6 +46235,10 @@
     {
       "Date": "2022-12-05 18:00",
       "Rate": "19.7326"
+    },
+    {
+      "Date": "2022-12-05 19:00",
+      "Rate": "19.7485"
     }
   ]
 }
