--- a/indexRt.html
+++ b/indexRt.html
@@ -46239,6 +46239,10 @@
     {
       "Date": "2022-12-05 19:00",
       "Rate": "19.7485"
+    },
+    {
+      "Date": "2022-12-05 20:00",
+      "Rate": "19.7424"
     }
   ]
 }
