commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46243,6 +46243,10 @@
     {
       "Date": "2022-12-05 20:00",
       "Rate": "19.7424"
+    },
+    {
+      "Date": "2022-12-05 21:00",
+      "Rate": "19.7285"
     }
   ]
 }
