commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46247,6 +46247,10 @@
     {
       "Date": "2022-12-05 21:00",
       "Rate": "19.7285"
+    },
+    {
+      "Date": "2022-12-05 22:00",
+      "Rate": "19.7385"
     }
   ]
 }
