--- a/indexRt.html
+++ b/indexRt.html
@@ -46251,6 +46251,10 @@
     {
       "Date": "2022-12-05 22:00",
       "Rate": "19.7385"
+    },
+    {
+      "Date": "2022-12-05 23:00",
+      "Rate": "19.7525"
     }
   ]
 }
