--- a/indexRt.html
+++ b/indexRt.html
@@ -46255,6 +46255,10 @@
     {
       "Date": "2022-12-05 23:00",
       "Rate": "19.7525"
+    },
+    {
+      "Date": "2022-12-06 00:00",
+      "Rate": "19.7134"
     }
   ]
 }
