--- a/indexRt.html
+++ b/indexRt.html
@@ -46259,6 +46259,10 @@
     {
       "Date": "2022-12-06 00:00",
       "Rate": "19.7134"
+    },
+    {
+      "Date": "2022-12-06 01:00",
+      "Rate": "19.7267"
     }
   ]
 }
