--- a/indexRt.html
+++ b/indexRt.html
@@ -46263,6 +46263,10 @@
     {
       "Date": "2022-12-06 01:00",
       "Rate": "19.7267"
+    },
+    {
+      "Date": "2022-12-06 02:00",
+      "Rate": "19.6964"
     }
   ]
 }
