commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46267,6 +46267,10 @@
     {
       "Date": "2022-12-06 02:00",
       "Rate": "19.6964"
+    },
+    {
+      "Date": "2022-12-06 03:00",
+      "Rate": "19.7062"
     }
   ]
 }
