commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -1,9 +1,17 @@
 {"banks":[{
+  "bank_id": 1,
+  "bank_name": "",
+  "sell": 20.4,
+  "buy": 18.9,
+  "date": "2022-12-05 11:30:08",
+  "prev_buy": 19.9,
+  "prev_sell": 18.5
+},{
   "bank_id": 2,
   "bank_name": "BANAMEX",
   "sell": 20.21,
   "buy": 19.14,
-  "date": "2022-12-0515:40:09",
+  "date": "2022-12-05 15:40:09",
   "prev_buy": 19.89,
   "prev_sell": 18.82
 },{
@@ -11,7 +19,7 @@
   "bank_name": "SANTANDER",
   "sell": 21.06168,
   "buy": 19.53255,
-  "date": "2022-05-0217:10:09",
+  "date": "2022-05-02 17:10:09",
   "prev_buy": 21.06168,
   "prev_sell": 19.53255
 },{
@@ -19,7 +27,7 @@
   "bank_name": "HSBC",
   "sell": 19.74,
   "buy": 19.01,
-  "date": "2022-11-1812:40:10",
+  "date": "2022-11-18 12:40:10",
   "prev_buy": 19.74,
   "prev_sell": 19.01
 },{
@@ -27,7 +35,7 @@
   "bank_name": "SCOTIABANK",
   "sell": 20.0925725,
   "buy": 19.32364,
-  "date": "2022-12-0517:50:10",
+  "date": "2022-12-05 17:50:10",
   "prev_buy": 19.7567975,
   "prev_sell": 19.01396
 },{
@@ -35,7 +43,7 @@
   "bank_name": "BANXICO",
   "sell": "19.7000",
   "buy": "19.8680",
-  "date": "2021-10-2914:40:06",
+  "date": "2021-10-29 14:40:06",
   "prev_buy": 20.609,
   "prev_sell": 20.6025
 },{
@@ -43,7 +51,7 @@
   "bank_name": "IXE",
   "sell": 20,
   "buy": 18.6,
-  "date": "2022-12-0517:50:12",
+  "date": "2022-12-05 17:50:12",
   "prev_buy": 19.65,
   "prev_sell": 18.2
 },{
@@ -51,7 +59,7 @@
   "bank_name": "BANSI",
   "sell": 19.9938375,
   "buy": 19.42223,
-  "date": "2022-12-0517:50:13",
+  "date": "2022-12-05 17:50:13",
   "prev_buy": 19.6597125,
   "prev_sell": 19.11097
 },{
@@ -59,7 +67,7 @@
   "bank_name": "BAJIO",
   "sell": 20.7,
   "buy": 19.6,
-  "date": "2022-09-0611:40:12",
+  "date": "2022-09-06 11:40:12",
   "prev_buy": 20.7,
   "prev_sell": 19.6
 },{
@@ -67,7 +75,7 @@
   "bank_name": "BANCOMER",
   "sell": 20.73,
   "buy": 19.83,
-  "date": "2022-05-0217:10:13",
+  "date": "2022-05-02 17:10:13",
   "prev_buy": 20.73,
   "prev_sell": 19.83
 },{
@@ -75,7 +83,7 @@
   "bank_name": "BXMAS",
   "sell": 20.59,
   "buy": 20.05,
-  "date": "2022-03-0915:30:15",
+  "date": "2022-03-09 15:30:15",
   "prev_buy": 20.59,
   "prev_sell": 20.05
 },{
@@ -83,7 +91,7 @@
   "bank_name": "FAMSA",
   "sell": 20.14194,
   "buy": 19.32364,
-  "date": "2022-12-0517:50:15",
+  "date": "2022-12-05 17:50:15",
   "prev_buy": 19.80534,
   "prev_sell": 19.01396
 },{
@@ -91,7 +99,7 @@
   "bank_name": "BANCOAZTECA",
   "sell": 20.89,
   "buy": 20.15,
-  "date": "2022-03-0915:20:17",
+  "date": "2022-03-09 15:20:17",
   "prev_buy": 20.89,
   "prev_sell": 20.15
 },{
@@ -99,23 +107,23 @@
   "bank_name": "MONEX",
   "sell": 20.33,
   "buy": 19.81,
-  "date": "2022-12-0606:50:15",
+  "date": "2022-12-06 06:50:15",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.2067,
-  "buy": 19.1962,
-  "date": "2022-12-0606:50:15",
-  "prev_buy": 20.0432,
-  "prev_sell": 19.0327
+  "sell": 20.2063,
+  "buy": 19.1958,
+  "date": "2022-12-06 07:20:14",
+  "prev_buy": 20.0417,
+  "prev_sell": 19.0312
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
   "sell": 20.7,
   "buy": 19.2,
-  "date": "2022-10-1210:00:16",
+  "date": "2022-10-12 10:00:16",
   "prev_buy": 20.7,
   "prev_sell": 19.2
 },{
@@ -123,7 +131,7 @@
   "bank_name": "DOF",
   "sell": " 19.3422",
   "buy": " 19.3422",
-  "date": "2022-06-0307:10:28",
+  "date": "2022-06-03 07:10:28",
   "prev_buy": 19.5585,
   "prev_sell": 19.5585
 },{
@@ -131,7 +139,7 @@
   "bank_name": "INBURSA",
   "sell": 20.2,
   "buy": 19.2,
-  "date": "2022-12-0511:40:18",
+  "date": "2022-12-05 11:40:18",
   "prev_buy": 19.8,
   "prev_sell": 18.8
 },{
@@ -139,7 +147,7 @@
   "bank_name": "BANCOBASE",
   "sell": 20.87,
   "buy": 20.14,
-  "date": "2022-03-0915:20:22",
+  "date": "2022-03-09 15:20:22",
   "prev_buy": 20.87,
   "prev_sell": 20.14
 },{
@@ -147,7 +155,7 @@
   "bank_name": "SAT",
   "sell": " 19.3422",
   "buy": " 19.3422",
-  "date": "2022-12-0602:10:19",
+  "date": "2022-12-06 02:10:19",
   "prev_buy": 19.3422,
   "prev_sell": 19.3422
 },{
@@ -155,7 +163,7 @@
   "bank_name": "CIBANCO",
   "sell": 20.062952,
   "buy": 19.215191,
-  "date": "2022-12-0517:50:21",
+  "date": "2022-12-05 17:50:21",
   "prev_buy": 19.727672,
   "prev_sell": 18.907249
 },{
@@ -163,7 +171,7 @@
   "bank_name": "COMPARTAMOS",
   "sell": 20.102446,
   "buy": 19.254627,
-  "date": "2022-12-0517:50:22",
+  "date": "2022-12-05 17:50:22",
   "prev_buy": 19.766506,
   "prev_sell": 18.946053
 },{
@@ -171,7 +179,7 @@
   "bank_name": "BANCOPPEL",
   "sell": 20.1123195,
   "buy": 19.077165,
-  "date": "2022-12-0517:50:23",
+  "date": "2022-12-05 17:50:23",
   "prev_buy": 19.7762145,
   "prev_sell": 18.771435
 },{
@@ -179,7 +187,7 @@
   "bank_name": "BANCREA",
   "sell": 20.0708508,
   "buy": 19.2763168,
-  "date": "2022-12-0517:50:23",
+  "date": "2022-12-05 17:50:23",
   "prev_buy": 19.7354388,
   "prev_sell": 18.9673952
 },{
@@ -187,7 +195,7 @@
   "bank_name": "BANKAOOL",
   "sell": 19.983964,
   "buy": 19.087024,
-  "date": "2022-12-0517:50:23",
+  "date": "2022-12-05 17:50:23",
   "prev_buy": 19.650004,
   "prev_sell": 18.781136
 },{
@@ -195,7 +203,7 @@
   "bank_name": "BANSEFI",
   "sell": 20.161687,
   "buy": 18.870126,
-  "date": "2022-12-0517:50:24",
+  "date": "2022-12-05 17:50:24",
   "prev_buy": 19.824757,
   "prev_sell": 18.567714
 },{
@@ -203,7 +211,7 @@
   "bank_name": "BANCOFITERRA",
   "sell": 20.122193,
   "buy": 19.303922,
-  "date": "2022-12-0517:50:24",
+  "date": "2022-12-05 17:50:24",
   "prev_buy": 19.785923,
   "prev_sell": 18.994558
 },{
@@ -211,15 +219,15 @@
   "bank_name": "BANCAMIFEL",
   "sell": 20.240675,
   "buy": 18.92928,
-  "date": "2022-12-0517:50:25",
+  "date": "2022-12-05 17:50:25",
   "prev_buy": 19.902425,
   "prev_sell": 18.62592
 },{
   "bank_id": 29,
-  "bank_name": "AMERICANEXPRESS",
+  "bank_name": "AMERICAN EXPRESS",
   "sell": 20.21006715,
   "buy": 19.254627,
-  "date": "2022-12-0517:50:25",
+  "date": "2022-12-05 17:50:25",
   "prev_buy": 19.87232865,
   "prev_sell": 18.946053
 },{
@@ -227,7 +235,7 @@
   "bank_name": "VISA",
   "sell": 20.1913075,
   "buy": 19.274345,
-  "date": "2022-12-0517:50:26",
+  "date": "2022-12-05 17:50:26",
   "prev_buy": 19.8538825,
   "prev_sell": 18.965455
 },{
@@ -235,7 +243,7 @@
   "bank_name": "MASTERCARD",
   "sell": 20.1913075,
   "buy": 19.264486,
-  "date": "2022-12-0517:50:27",
+  "date": "2022-12-05 17:50:27",
   "prev_buy": 19.8538825,
   "prev_sell": 18.955754
 },{
@@ -243,7 +251,23 @@
   "bank_name": "BANORTE",
   "sell": 20,
   "buy": 18.6,
-  "date": "2022-12-0517:50:27",
+  "date": "2022-12-05 17:50:27",
   "prev_buy": 19.65,
   "prev_sell": 18.2
+},{
+  "bank_id": 33,
+  "bank_name": "",
+  "sell": 20.4552,
+  "buy": 19.452999,
+  "date": "2021-09-07 16:50:20",
+  "prev_buy": 20.4552,
+  "prev_sell": 19.452999
+},{
+  "bank_id": 34,
+  "bank_name": "",
+  "sell": 20.9568,
+  "buy": 19.9632,
+  "date": "2021-09-30 10:00:17",
+  "prev_buy": 20.9568,
+  "prev_sell": 19.9632
 }]}
