commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46271,6 +46271,10 @@
     {
       "Date": "2022-12-06 03:00",
       "Rate": "19.7062"
+    },
+    {
+      "Date": "2022-12-06 04:00",
+      "Rate": "19.6742"
     }
   ]
 }
