commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46275,6 +46275,10 @@
     {
       "Date": "2022-12-06 04:00",
       "Rate": "19.6742"
+    },
+    {
+      "Date": "2022-12-06 05:00",
+      "Rate": "19.6358"
     }
   ]
 }
