--- a/indexRt.html
+++ b/indexRt.html
@@ -46279,6 +46279,10 @@
     {
       "Date": "2022-12-06 05:00",
       "Rate": "19.6358"
+    },
+    {
+      "Date": "2022-12-06 06:00",
+      "Rate": "19.7037"
     }
   ]
 }
