--- a/indexRt.html
+++ b/indexRt.html
@@ -46283,6 +46283,10 @@
     {
       "Date": "2022-12-06 06:00",
       "Rate": "19.7037"
+    },
+    {
+      "Date": "2022-12-06 07:00",
+      "Rate": "19.7385"
     }
   ]
 }
