commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46287,6 +46287,10 @@
     {
       "Date": "2022-12-06 07:00",
       "Rate": "19.7385"
+    },
+    {
+      "Date": "2022-12-06 08:00",
+      "Rate": "19.7954"
     }
   ]
 }
