commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46291,6 +46291,10 @@
     {
       "Date": "2022-12-06 08:00",
       "Rate": "19.7954"
+    },
+    {
+      "Date": "2022-12-06 09:00",
+      "Rate": "19.8474"
     }
   ]
 }
