commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46295,6 +46295,10 @@
     {
       "Date": "2022-12-06 09:00",
       "Rate": "19.8474"
+    },
+    {
+      "Date": "2022-12-06 10:00",
+      "Rate": "19.8109"
     }
   ]
 }
