commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46299,6 +46299,10 @@
     {
       "Date": "2022-12-06 10:00",
       "Rate": "19.8109"
+    },
+    {
+      "Date": "2022-12-06 11:00",
+      "Rate": "19.7826"
     }
   ]
 }
