commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46303,6 +46303,10 @@
     {
       "Date": "2022-12-06 11:00",
       "Rate": "19.7826"
+    },
+    {
+      "Date": "2022-12-06 12:00",
+      "Rate": "19.7840"
     }
   ]
 }
