commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46307,6 +46307,10 @@
     {
       "Date": "2022-12-06 12:00",
       "Rate": "19.7840"
+    },
+    {
+      "Date": "2022-12-06 13:00",
+      "Rate": "19.7605"
     }
   ]
 }
