commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46311,6 +46311,10 @@
     {
       "Date": "2022-12-06 13:00",
       "Rate": "19.7605"
+    },
+    {
+      "Date": "2022-12-06 14:00",
+      "Rate": "19.7608"
     }
   ]
 }
