commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46315,6 +46315,10 @@
     {
       "Date": "2022-12-06 14:00",
       "Rate": "19.7608"
+    },
+    {
+      "Date": "2022-12-06 15:00",
+      "Rate": "19.7729"
     }
   ]
 }
