commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46319,6 +46319,10 @@
     {
       "Date": "2022-12-06 15:00",
       "Rate": "19.7729"
+    },
+    {
+      "Date": "2022-12-06 16:00",
+      "Rate": "19.7694"
     }
   ]
 }
