commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46323,6 +46323,10 @@
     {
       "Date": "2022-12-06 16:00",
       "Rate": "19.7694"
+    },
+    {
+      "Date": "2022-12-06 17:00",
+      "Rate": "19.7754"
     }
   ]
 }
