commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46327,6 +46327,10 @@
     {
       "Date": "2022-12-06 17:00",
       "Rate": "19.7754"
+    },
+    {
+      "Date": "2022-12-06 18:00",
+      "Rate": "19.7648"
     }
   ]
 }
