commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46331,6 +46331,10 @@
     {
       "Date": "2022-12-06 18:00",
       "Rate": "19.7648"
+    },
+    {
+      "Date": "2022-12-06 19:00",
+      "Rate": "19.7569"
     }
   ]
 }
