commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46335,6 +46335,10 @@
     {
       "Date": "2022-12-06 19:00",
       "Rate": "19.7569"
+    },
+    {
+      "Date": "2022-12-06 20:00",
+      "Rate": "19.7650"
     }
   ]
 }
