commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46339,6 +46339,10 @@
     {
       "Date": "2022-12-06 20:00",
       "Rate": "19.7650"
+    },
+    {
+      "Date": "2022-12-06 21:00",
+      "Rate": "19.7739"
     }
   ]
 }
