--- a/indexRt.html
+++ b/indexRt.html
@@ -46343,6 +46343,10 @@
     {
       "Date": "2022-12-06 21:00",
       "Rate": "19.7739"
+    },
+    {
+      "Date": "2022-12-06 22:00",
+      "Rate": "19.7966"
     }
   ]
 }
