--- a/indexRt.html
+++ b/indexRt.html
@@ -46347,6 +46347,10 @@
     {
       "Date": "2022-12-06 22:00",
       "Rate": "19.7966"
+    },
+    {
+      "Date": "2022-12-06 23:00",
+      "Rate": "19.8194"
     }
   ]
 }
