commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46351,6 +46351,10 @@
     {
       "Date": "2022-12-06 23:00",
       "Rate": "19.8194"
+    },
+    {
+      "Date": "2022-12-07 00:00",
+      "Rate": "19.8073"
     }
   ]
 }
