--- a/indexRt.html
+++ b/indexRt.html
@@ -46355,6 +46355,10 @@
     {
       "Date": "2022-12-07 00:00",
       "Rate": "19.8073"
+    },
+    {
+      "Date": "2022-12-07 01:00",
+      "Rate": "19.7764"
     }
   ]
 }
