commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46359,6 +46359,10 @@
     {
       "Date": "2022-12-07 01:00",
       "Rate": "19.7764"
+    },
+    {
+      "Date": "2022-12-07 02:00",
+      "Rate": "19.8010"
     }
   ]
 }
