--- a/indexRt.html
+++ b/indexRt.html
@@ -46363,6 +46363,10 @@
     {
       "Date": "2022-12-07 02:00",
       "Rate": "19.8010"
+    },
+    {
+      "Date": "2022-12-07 03:00",
+      "Rate": "19.7939"
     }
   ]
 }
