--- a/indexRt.html
+++ b/indexRt.html
@@ -46367,6 +46367,10 @@
     {
       "Date": "2022-12-07 03:00",
       "Rate": "19.7939"
+    },
+    {
+      "Date": "2022-12-07 04:00",
+      "Rate": "19.7840"
     }
   ]
 }
