commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46371,6 +46371,10 @@
     {
       "Date": "2022-12-07 04:00",
       "Rate": "19.7840"
+    },
+    {
+      "Date": "2022-12-07 05:00",
+      "Rate": "19.7086"
     }
   ]
 }
