--- a/indexRt.html
+++ b/indexRt.html
@@ -46375,6 +46375,10 @@
     {
       "Date": "2022-12-07 05:00",
       "Rate": "19.7086"
+    },
+    {
+      "Date": "2022-12-07 06:00",
+      "Rate": "19.7141"
     }
   ]
 }
