commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46379,6 +46379,10 @@
     {
       "Date": "2022-12-07 06:00",
       "Rate": "19.7141"
+    },
+    {
+      "Date": "2022-12-07 07:00",
+      "Rate": "19.6791"
     }
   ]
 }
