commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 20.0244,
-  "buy": 19.27758,
-  "date": "2022-12-07 10:50:11",
-  "prev_buy": 20.0901305,
-  "prev_sell": 19.348336
+  "sell": 20.0038465,
+  "buy": 19.264448,
+  "date": "2022-12-07 11:10:11",
+  "prev_buy": 20.06988225,
+  "prev_sell": 19.328442
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.926,
-  "buy": 19.375935,
-  "date": "2022-12-07 10:50:14",
-  "prev_buy": 19.9914075,
-  "prev_sell": 19.447052
+  "sell": 19.9055475,
+  "buy": 19.362736,
+  "date": "2022-12-07 11:10:13",
+  "prev_buy": 19.97125875,
+  "prev_sell": 19.4270565
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 20.1858,
-  "buy": 19.3795,
-  "date": "2022-12-07 10:30:15",
-  "prev_buy": 20.139492,
-  "prev_sell": 19.348336
+  "sell": 20.052996,
+  "buy": 19.264448,
+  "date": "2022-12-07 11:10:15",
+  "prev_buy": 20.119194,
+  "prev_sell": 19.328442
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.04,
-  "buy": 19.53,
-  "date": "2022-12-07 10:40:16",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-12-07 11:10:16",
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.17,
-  "buy": 19.154,
-  "date": "2022-12-07 10:50:18",
-  "prev_buy": 20.2516,
-  "prev_sell": 19.2411
+  "sell": 20.1839,
+  "buy": 19.1734,
+  "date": "2022-12-07 11:10:17",
+  "prev_buy": 20.244,
+  "prev_sell": 19.2335
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,97 +161,97 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.99488,
-  "buy": 19.1693895,
-  "date": "2022-12-07 10:50:27",
-  "prev_buy": 20.0605136,
-  "prev_sell": 19.2397484
+  "sell": 19.9743568,
+  "buy": 19.1563312,
+  "date": "2022-12-07 11:10:26",
+  "prev_buy": 20.0402952,
+  "prev_sell": 19.21996605
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 20.03424,
-  "buy": 19.2087315,
-  "date": "2022-12-07 10:50:27",
-  "prev_buy": 20.1000028,
-  "prev_sell": 19.2792348
+  "sell": 20.14622,
+  "buy": 19.3102875,
+  "date": "2022-12-07 11:10:27",
+  "prev_buy": 20.0797446,
+  "prev_sell": 19.25941185
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
   "sell": 20.156115,
   "buy": 19.1323125,
   "date": "2022-12-07 10:30:22",
-  "prev_buy": 20.1098751,
-  "prev_sell": 19.101546
+  "prev_buy": 20.08960695,
+  "prev_sell": 19.08190575
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 20.002752,
-  "buy": 19.2303696,
-  "date": "2022-12-07 10:50:28",
-  "prev_buy": 20.06841144,
-  "prev_sell": 19.30095232
+  "sell": 19.98222072,
+  "buy": 19.21726976,
+  "date": "2022-12-07 11:10:28",
+  "prev_buy": 20.04818508,
+  "prev_sell": 19.28110704
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 20.02748,
-  "buy": 19.1422,
-  "date": "2022-12-07 10:50:29",
-  "prev_buy": 19.9815352,
-  "prev_sell": 19.1114176
+  "sell": 19.8957176,
+  "buy": 19.0285568,
+  "date": "2022-12-07 11:10:28",
+  "prev_buy": 19.9613964,
+  "prev_sell": 19.0917672
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.09328,
-  "buy": 18.825147,
-  "date": "2022-12-07 10:50:29",
-  "prev_buy": 20.1592366,
-  "prev_sell": 18.8942424
+  "sell": 20.20559,
+  "buy": 18.924675,
+  "date": "2022-12-07 11:10:29",
+  "prev_buy": 20.1389187,
+  "prev_sell": 18.8748153
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
   "sell": 20.16601,
   "buy": 19.359725,
   "date": "2022-12-07 10:40:24",
-  "prev_buy": 20.1197474,
-  "prev_sell": 19.3285928
+  "prev_buy": 20.0994693,
+  "prev_sell": 19.3087191
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.172,
-  "buy": 18.88416,
-  "date": "2022-12-07 10:50:30",
-  "prev_buy": 20.238215,
-  "prev_sell": 18.953472
+  "sell": 20.151295,
+  "buy": 18.871296,
+  "date": "2022-12-07 11:10:31",
+  "prev_buy": 20.2178175,
+  "prev_sell": 18.933984
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.141496,
-  "buy": 19.2087315,
-  "date": "2022-12-07 10:50:31",
-  "prev_buy": 20.20761087,
-  "prev_sell": 19.2792348
+  "sell": 20.2540755,
+  "buy": 19.3102875,
+  "date": "2022-12-07 11:00:25",
+  "prev_buy": 20.18724422,
+  "prev_sell": 19.25941185
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.235275,
-  "buy": 19.3300625,
-  "date": "2022-12-07 10:50:31",
-  "prev_buy": 20.1888535,
-  "prev_sell": 19.298978
+  "sell": 20.1021455,
+  "buy": 19.215304,
+  "date": "2022-12-07 11:10:32",
+  "prev_buy": 20.16850575,
+  "prev_sell": 19.27913475
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.235275,
-  "buy": 19.320175,
-  "date": "2022-12-07 10:50:32",
-  "prev_buy": 20.1888535,
-  "prev_sell": 19.2891064
+  "sell": 20.1021455,
+  "buy": 19.2054752,
+  "date": "2022-12-07 11:10:32",
+  "prev_buy": 20.18895575,
+  "prev_sell": 19.2896926
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
-  "sell": 20.05,
-  "buy": 18.65,
-  "date": "2022-12-06 17:40:27",
+  "sell": 19.95,
+  "buy": 18.55,
+  "date": "2022-12-07 11:10:33",
   "prev_buy": 20,
   "prev_sell": 18.6
 },{
