commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46383,6 +46383,10 @@
     {
       "Date": "2022-12-07 07:00",
       "Rate": "19.6791"
+    },
+    {
+      "Date": "2022-12-07 08:00",
+      "Rate": "19.7451"
     }
   ]
 }
