--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -12,7 +12,7 @@
   "sell": 20.21,
   "buy": 19.14,
   "date": "2022-12-07 11:40:08",
-  "prev_buy": 20.23,
+  "prev_buy": 20.27,
   "prev_sell": 19.14
 },{
   "bank_id": 3,
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 20.0539075,
-  "buy": 19.312958,
-  "date": "2022-12-07 11:40:10",
-  "prev_buy": 20.08952,
-  "prev_sell": 19.347454
+  "sell": 20.0714085,
+  "buy": 19.329422,
+  "date": "2022-12-07 11:50:10",
+  "prev_buy": 20.0998985,
+  "prev_sell": 19.35745
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.9553625,
-  "buy": 19.4114935,
-  "date": "2022-12-07 11:40:12",
-  "prev_buy": 19.9908,
-  "prev_sell": 19.4461655
+  "sell": 19.9727775,
+  "buy": 19.4280415,
+  "date": "2022-12-07 11:50:12",
+  "prev_buy": 20.0011275,
+  "prev_sell": 19.4562125
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -92,8 +92,8 @@
   "sell": 20.1858,
   "buy": 19.3795,
   "date": "2022-12-07 11:40:14",
-  "prev_buy": 20.13888,
-  "prev_sell": 19.347454
+  "prev_buy": 20.149284,
+  "prev_sell": 19.35745
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.04,
-  "buy": 19.53,
-  "date": "2022-12-07 11:20:16",
-  "prev_buy": 20.22,
-  "prev_sell": 19.69
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-12-07 11:50:15",
+  "prev_buy": 20.33,
+  "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.23,
-  "buy": 19.213,
-  "date": "2022-12-07 11:40:15",
-  "prev_buy": 20.2591,
-  "prev_sell": 19.2486
+  "sell": 20.2655,
+  "buy": 19.255,
+  "date": "2022-12-07 11:50:15",
+  "prev_buy": 20.2862,
+  "prev_sell": 19.2757
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,25 +161,25 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 20.10664,
-  "buy": 19.2707375,
-  "date": "2022-12-07 11:30:27",
-  "prev_buy": 20.059904,
-  "prev_sell": 19.23887135
+  "sell": 20.0418192,
+  "buy": 19.22094055,
+  "date": "2022-12-07 11:50:20",
+  "prev_buy": 20.0702672,
+  "prev_sell": 19.24881125
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
   "sell": 20.14622,
   "buy": 19.3102875,
   "date": "2022-12-07 11:40:20",
-  "prev_buy": 20.099392,
-  "prev_sell": 19.27835595
+  "prev_buy": 20.1097756,
+  "prev_sell": 19.28831625
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 20.0736165,
-  "buy": 19.06661925,
-  "date": "2022-12-07 11:40:20",
+  "sell": 20.156115,
+  "buy": 19.1323125,
+  "date": "2022-12-07 11:50:21",
   "prev_buy": 20.109264,
   "prev_sell": 19.10067525
 },{
@@ -193,17 +193,17 @@
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.945508,
-  "buy": 19.0764728,
-  "date": "2022-12-07 11:40:21",
+  "sell": 19.9629144,
+  "buy": 19.0927352,
+  "date": "2022-12-07 11:50:22",
   "prev_buy": 19.980928,
   "prev_sell": 19.1105464
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.122889,
-  "buy": 18.8596947,
-  "date": "2022-12-07 11:40:22",
+  "sell": 20.1404502,
+  "buy": 18.8757723,
+  "date": "2022-12-07 11:50:22",
   "prev_buy": 20.158624,
   "prev_sell": 18.8933811
 },{
@@ -233,25 +233,25 @@
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.235275,
-  "buy": 19.3300625,
-  "date": "2022-12-07 11:40:24",
+  "sell": 20.1700395,
+  "buy": 19.28011225,
+  "date": "2022-12-07 11:50:24",
   "prev_buy": 20.18824,
   "prev_sell": 19.29809825
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.1524525,
-  "buy": 19.2538367,
-  "date": "2022-12-07 11:40:25",
+  "sell": 20.235275,
+  "buy": 19.320175,
+  "date": "2022-12-07 11:50:25",
   "prev_buy": 20.18824,
   "prev_sell": 19.2882271
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
-  "sell": 20.05,
-  "buy": 18.65,
-  "date": "2022-12-07 11:40:26",
+  "sell": 19.95,
+  "buy": 18.55,
+  "date": "2022-12-07 11:50:25",
   "prev_buy": 20,
   "prev_sell": 18.6
 },{
