--- a/indexRt.html
+++ b/indexRt.html
@@ -46387,6 +46387,10 @@
     {
       "Date": "2022-12-07 08:00",
       "Rate": "19.7451"
+    },
+    {
+      "Date": "2022-12-07 09:00",
+      "Rate": "19.7047"
     }
   ]
 }
