commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46391,6 +46391,10 @@
     {
       "Date": "2022-12-07 09:00",
       "Rate": "19.7047"
+    },
+    {
+      "Date": "2022-12-07 10:00",
+      "Rate": "19.6545"
     }
   ]
 }
