--- a/indexRt.html
+++ b/indexRt.html
@@ -46395,6 +46395,10 @@
     {
       "Date": "2022-12-07 10:00",
       "Rate": "19.6545"
+    },
+    {
+      "Date": "2022-12-07 11:00",
+      "Rate": "19.6685"
     }
   ]
 }
