commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46399,6 +46399,10 @@
     {
       "Date": "2022-12-07 11:00",
       "Rate": "19.6685"
+    },
+    {
+      "Date": "2022-12-07 12:00",
+      "Rate": "19.6608"
     }
   ]
 }
