commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46403,6 +46403,10 @@
     {
       "Date": "2022-12-07 12:00",
       "Rate": "19.6608"
+    },
+    {
+      "Date": "2022-12-07 13:00",
+      "Rate": "19.6744"
     }
   ]
 }
