commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46407,6 +46407,10 @@
     {
       "Date": "2022-12-07 13:00",
       "Rate": "19.6744"
+    },
+    {
+      "Date": "2022-12-07 14:00",
+      "Rate": "19.6681"
     }
   ]
 }
