commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46411,6 +46411,10 @@
     {
       "Date": "2022-12-07 14:00",
       "Rate": "19.6681"
+    },
+    {
+      "Date": "2022-12-07 15:00",
+      "Rate": "19.6606"
     }
   ]
 }
