commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46415,6 +46415,10 @@
     {
       "Date": "2022-12-07 15:00",
       "Rate": "19.6606"
+    },
+    {
+      "Date": "2022-12-07 16:00",
+      "Rate": "19.6814"
     }
   ]
 }
