commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46419,6 +46419,10 @@
     {
       "Date": "2022-12-07 16:00",
       "Rate": "19.6814"
+    },
+    {
+      "Date": "2022-12-07 17:00",
+      "Rate": "19.7159"
     }
   ]
 }
