commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46423,6 +46423,10 @@
     {
       "Date": "2022-12-07 17:00",
       "Rate": "19.7159"
+    },
+    {
+      "Date": "2022-12-07 18:00",
+      "Rate": "19.7121"
     }
   ]
 }
