commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46427,6 +46427,10 @@
     {
       "Date": "2022-12-07 18:00",
       "Rate": "19.7121"
+    },
+    {
+      "Date": "2022-12-07 19:00",
+      "Rate": "19.7159"
     }
   ]
 }
