commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46431,6 +46431,10 @@
     {
       "Date": "2022-12-07 19:00",
       "Rate": "19.7159"
+    },
+    {
+      "Date": "2022-12-07 20:00",
+      "Rate": "19.7080"
     }
   ]
 }
