--- a/indexRt.html
+++ b/indexRt.html
@@ -46435,6 +46435,10 @@
     {
       "Date": "2022-12-07 20:00",
       "Rate": "19.7080"
+    },
+    {
+      "Date": "2022-12-07 21:00",
+      "Rate": "19.7171"
     }
   ]
 }
