--- a/indexRt.html
+++ b/indexRt.html
@@ -46439,6 +46439,10 @@
     {
       "Date": "2022-12-07 21:00",
       "Rate": "19.7171"
+    },
+    {
+      "Date": "2022-12-07 22:00",
+      "Rate": "19.7090"
     }
   ]
 }
