--- a/indexRt.html
+++ b/indexRt.html
@@ -46443,6 +46443,10 @@
     {
       "Date": "2022-12-07 22:00",
       "Rate": "19.7090"
+    },
+    {
+      "Date": "2022-12-07 23:00",
+      "Rate": "19.6759"
     }
   ]
 }
