--- a/indexRt.html
+++ b/indexRt.html
@@ -46447,6 +46447,10 @@
     {
       "Date": "2022-12-07 23:00",
       "Rate": "19.6759"
+    },
+    {
+      "Date": "2022-12-08 00:00",
+      "Rate": "19.6438"
     }
   ]
 }
