commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46451,6 +46451,10 @@
     {
       "Date": "2022-12-08 00:00",
       "Rate": "19.6438"
+    },
+    {
+      "Date": "2022-12-08 01:00",
+      "Rate": "19.6735"
     }
   ]
 }
