commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46455,6 +46455,10 @@
     {
       "Date": "2022-12-08 01:00",
       "Rate": "19.6735"
+    },
+    {
+      "Date": "2022-12-08 02:00",
+      "Rate": "19.6961"
     }
   ]
 }
