commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46459,6 +46459,10 @@
     {
       "Date": "2022-12-08 02:00",
       "Rate": "19.6961"
+    },
+    {
+      "Date": "2022-12-08 03:00",
+      "Rate": "19.6821"
     }
   ]
 }
