commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46463,6 +46463,10 @@
     {
       "Date": "2022-12-08 03:00",
       "Rate": "19.6821"
+    },
+    {
+      "Date": "2022-12-08 04:00",
+      "Rate": "19.6868"
     }
   ]
 }
