--- a/indexRt.html
+++ b/indexRt.html
@@ -46467,6 +46467,10 @@
     {
       "Date": "2022-12-08 04:00",
       "Rate": "19.6868"
+    },
+    {
+      "Date": "2022-12-08 05:00",
+      "Rate": "19.6699"
     }
   ]
 }
