commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 20.00405,
-  "buy": 19.2521,
-  "date": "2022-12-07 17:50:12",
-  "prev_buy": 20.136325,
-  "prev_sell": 19.3795
+  "sell": 20.01626,
+  "buy": 19.2717,
+  "date": "2022-12-08 09:40:11",
+  "prev_buy": 20.0620475,
+  "prev_sell": 19.31286
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.90575,
-  "buy": 19.350325,
-  "date": "2022-12-07 17:20:13",
-  "prev_buy": 20.037375,
-  "prev_sell": 19.478375
+  "sell": 19.9179,
+  "buy": 19.370025,
+  "date": "2022-12-08 09:40:13",
+  "prev_buy": 19.9634625,
+  "prev_sell": 19.411395
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,9 +89,9 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 20.0532,
-  "buy": 19.2521,
-  "date": "2022-12-07 17:20:15",
+  "sell": 20.06544,
+  "buy": 19.2717,
+  "date": "2022-12-08 09:40:15",
   "prev_buy": 20.1858,
   "prev_sell": 19.3795
 },{
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-12-08 09:20:16",
+  "sell": 20.04,
+  "buy": 19.53,
+  "date": "2022-12-08 09:30:15",
   "prev_buy": 20.04,
   "prev_sell": 19.53
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.1776,
-  "buy": 19.1671,
-  "date": "2022-12-08 09:00:16",
-  "prev_buy": 20.212,
-  "prev_sell": 19.204
+  "sell": 20.182,
+  "buy": 19.163,
+  "date": "2022-12-08 09:40:17",
+  "prev_buy": 20.2456,
+  "prev_sell": 19.2351
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.97456,
-  "buy": 19.1440525,
-  "date": "2022-12-07 17:20:21",
-  "prev_buy": 20.10664,
-  "prev_sell": 19.2707375
+  "sell": 19.986752,
+  "buy": 19.1635425,
+  "date": "2022-12-08 09:40:20",
+  "prev_buy": 20.032472,
+  "prev_sell": 19.2044715
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 20.01388,
-  "buy": 19.1833425,
-  "date": "2022-12-07 17:20:22",
-  "prev_buy": 20.14622,
-  "prev_sell": 19.3102875
+  "sell": 20.026096,
+  "buy": 19.2028725,
+  "date": "2022-12-08 09:40:21",
+  "prev_buy": 20.071906,
+  "prev_sell": 19.2438855
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 20.02371,
-  "buy": 19.0065375,
-  "date": "2022-12-07 17:20:22",
+  "sell": 20.035932,
+  "buy": 19.0258875,
+  "date": "2022-12-08 09:40:21",
   "prev_buy": 20.156115,
   "prev_sell": 19.1323125
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.982424,
-  "buy": 19.204952,
-  "date": "2022-12-07 17:20:23",
-  "prev_buy": 20.114556,
-  "prev_sell": 19.33204
+  "sell": 19.9946208,
+  "buy": 19.224504,
+  "date": "2022-12-08 09:40:22",
+  "prev_buy": 20.0403588,
+  "prev_sell": 19.2655632
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.89592,
-  "buy": 19.01636,
-  "date": "2022-12-07 17:30:53",
-  "prev_buy": 20.02748,
-  "prev_sell": 19.1422
+  "sell": 19.908064,
+  "buy": 19.03572,
+  "date": "2022-12-08 09:40:22",
+  "prev_buy": 19.953604,
+  "prev_sell": 19.076376
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.07286,
-  "buy": 18.800265,
-  "date": "2022-12-07 17:20:44",
+  "sell": 20.085112,
+  "buy": 18.819405,
+  "date": "2022-12-08 09:40:23",
   "prev_buy": 20.20559,
   "prev_sell": 18.924675
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 20.03354,
-  "buy": 19.232455,
-  "date": "2022-12-07 17:20:44",
-  "prev_buy": 20.16601,
-  "prev_sell": 19.359725
+  "sell": 20.045768,
+  "buy": 19.252035,
+  "date": "2022-12-08 09:40:23",
+  "prev_buy": 20.091623,
+  "prev_sell": 19.293153
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.1515,
-  "buy": 18.8592,
-  "date": "2022-12-07 17:20:44",
+  "sell": 20.1638,
+  "buy": 18.8784,
+  "date": "2022-12-08 09:40:24",
   "prev_buy": 20.28475,
   "prev_sell": 18.984
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.121027,
-  "buy": 19.1833425,
-  "date": "2022-12-07 17:30:56",
-  "prev_buy": 20.2540755,
-  "prev_sell": 19.3102875
+  "sell": 20.1333084,
+  "buy": 19.2028725,
+  "date": "2022-12-08 09:40:24",
+  "prev_buy": 20.17936365,
+  "prev_sell": 19.2438855
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.10235,
-  "buy": 19.2029875,
-  "date": "2022-12-07 17:30:56",
-  "prev_buy": 20.235275,
-  "prev_sell": 19.3300625
+  "sell": 20.11462,
+  "buy": 19.2225375,
+  "date": "2022-12-08 09:40:25",
+  "prev_buy": 20.1606325,
+  "prev_sell": 19.2635925
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.10235,
-  "buy": 19.193165,
-  "date": "2022-12-07 17:40:25",
-  "prev_buy": 20.235275,
-  "prev_sell": 19.320175
+  "sell": 20.11462,
+  "buy": 19.212705,
+  "date": "2022-12-08 09:40:25",
+  "prev_buy": 20.1606325,
+  "prev_sell": 19.253739
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
