--- a/indexRt.html
+++ b/indexRt.html
@@ -46471,6 +46471,10 @@
     {
       "Date": "2022-12-08 05:00",
       "Rate": "19.6699"
+    },
+    {
+      "Date": "2022-12-08 06:00",
+      "Rate": "19.6943"
     }
   ]
 }
