commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46475,6 +46475,10 @@
     {
       "Date": "2022-12-08 06:00",
       "Rate": "19.6943"
+    },
+    {
+      "Date": "2022-12-08 07:00",
+      "Rate": "19.7064"
     }
   ]
 }
