commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46479,6 +46479,10 @@
     {
       "Date": "2022-12-08 07:00",
       "Rate": "19.7064"
+    },
+    {
+      "Date": "2022-12-08 08:00",
+      "Rate": "19.6747"
     }
   ]
 }
