commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46483,6 +46483,10 @@
     {
       "Date": "2022-12-08 08:00",
       "Rate": "19.6747"
+    },
+    {
+      "Date": "2022-12-08 09:00",
+      "Rate": "19.6765"
     }
   ]
 }
