commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46487,6 +46487,10 @@
     {
       "Date": "2022-12-08 09:00",
       "Rate": "19.6765"
+    },
+    {
+      "Date": "2022-12-08 10:00",
+      "Rate": "19.6687"
     }
   ]
 }
