commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46491,6 +46491,10 @@
     {
       "Date": "2022-12-08 10:00",
       "Rate": "19.6687"
+    },
+    {
+      "Date": "2022-12-08 11:00",
+      "Rate": "19.6484"
     }
   ]
 }
