commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46495,6 +46495,10 @@
     {
       "Date": "2022-12-08 11:00",
       "Rate": "19.6484"
+    },
+    {
+      "Date": "2022-12-08 12:00",
+      "Rate": "19.6143"
     }
   ]
 }
