commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46499,6 +46499,10 @@
     {
       "Date": "2022-12-08 12:00",
       "Rate": "19.6143"
+    },
+    {
+      "Date": "2022-12-08 13:00",
+      "Rate": "19.6316"
     }
   ]
 }
