commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46503,6 +46503,10 @@
     {
       "Date": "2022-12-08 13:00",
       "Rate": "19.6316"
+    },
+    {
+      "Date": "2022-12-08 14:00",
+      "Rate": "19.6232"
     }
   ]
 }
