commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46507,6 +46507,10 @@
     {
       "Date": "2022-12-08 14:00",
       "Rate": "19.6232"
+    },
+    {
+      "Date": "2022-12-08 15:00",
+      "Rate": "19.6352"
     }
   ]
 }
