commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46511,6 +46511,10 @@
     {
       "Date": "2022-12-08 15:00",
       "Rate": "19.6352"
+    },
+    {
+      "Date": "2022-12-08 16:00",
+      "Rate": "19.6281"
     }
   ]
 }
