commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46515,6 +46515,10 @@
     {
       "Date": "2022-12-08 16:00",
       "Rate": "19.6281"
+    },
+    {
+      "Date": "2022-12-08 17:00",
+      "Rate": "19.6520"
     }
   ]
 }
