commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46519,6 +46519,10 @@
     {
       "Date": "2022-12-08 17:00",
       "Rate": "19.6520"
+    },
+    {
+      "Date": "2022-12-08 18:00",
+      "Rate": "19.6295"
     }
   ]
 }
