commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46523,6 +46523,10 @@
     {
       "Date": "2022-12-08 18:00",
       "Rate": "19.6295"
+    },
+    {
+      "Date": "2022-12-08 19:00",
+      "Rate": "19.6275"
     }
   ]
 }
