commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46527,6 +46527,10 @@
     {
       "Date": "2022-12-08 19:00",
       "Rate": "19.6275"
+    },
+    {
+      "Date": "2022-12-08 20:00",
+      "Rate": "19.6205"
     }
   ]
 }
