commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46531,6 +46531,10 @@
     {
       "Date": "2022-12-08 20:00",
       "Rate": "19.6205"
+    },
+    {
+      "Date": "2022-12-08 21:00",
+      "Rate": "19.6278"
     }
   ]
 }
