commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46535,6 +46535,10 @@
     {
       "Date": "2022-12-08 21:00",
       "Rate": "19.6278"
+    },
+    {
+      "Date": "2022-12-08 22:00",
+      "Rate": "19.6327"
     }
   ]
 }
