commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46539,6 +46539,10 @@
     {
       "Date": "2022-12-08 22:00",
       "Rate": "19.6327"
+    },
+    {
+      "Date": "2022-12-08 23:00",
+      "Rate": "19.6235"
     }
   ]
 }
