--- a/indexRt.html
+++ b/indexRt.html
@@ -46543,6 +46543,10 @@
     {
       "Date": "2022-12-08 23:00",
       "Rate": "19.6235"
+    },
+    {
+      "Date": "2022-12-09 00:00",
+      "Rate": "19.6483"
     }
   ]
 }
