commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46547,6 +46547,10 @@
     {
       "Date": "2022-12-09 00:00",
       "Rate": "19.6483"
+    },
+    {
+      "Date": "2022-12-09 01:00",
+      "Rate": "19.6668"
     }
   ]
 }
