--- a/indexRt.html
+++ b/indexRt.html
@@ -46551,6 +46551,10 @@
     {
       "Date": "2022-12-09 01:00",
       "Rate": "19.6668"
+    },
+    {
+      "Date": "2022-12-09 02:00",
+      "Rate": "19.7103"
     }
   ]
 }
