--- a/indexRt.html
+++ b/indexRt.html
@@ -46555,6 +46555,10 @@
     {
       "Date": "2022-12-09 02:00",
       "Rate": "19.7103"
+    },
+    {
+      "Date": "2022-12-09 03:00",
+      "Rate": "19.7271"
     }
   ]
 }
