commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -46559,6 +46559,10 @@
     {
       "Date": "2022-12-09 03:00",
       "Rate": "19.7271"
+    },
+    {
+      "Date": "2022-12-09 04:00",
+      "Rate": "19.7237"
     }
   ]
 }
