--- a/indexRt.html
+++ b/indexRt.html
@@ -46563,6 +46563,10 @@
     {
       "Date": "2022-12-09 04:00",
       "Rate": "19.7237"
+    },
+    {
+      "Date": "2022-12-09 05:00",
+      "Rate": "19.7704"
     }
   ]
 }
