commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.96335,
-  "buy": 19.2129,
-  "date": "2022-12-08 17:40:15",
-  "prev_buy": 20.00405,
-  "prev_sell": 19.2521
+  "sell": 20.1047825,
+  "buy": 19.355,
+  "date": "2022-12-09 09:40:10",
+  "prev_buy": 20.01626,
+  "prev_sell": 19.2717
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.86525,
-  "buy": 19.310925,
-  "date": "2022-12-08 17:40:17",
-  "prev_buy": 19.90575,
-  "prev_sell": 19.350325
+  "sell": 20.0059875,
+  "buy": 19.45375,
+  "date": "2022-12-09 09:40:12",
+  "prev_buy": 19.9179,
+  "prev_sell": 19.370025
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 20.0124,
-  "buy": 19.2129,
-  "date": "2022-12-08 17:40:19",
-  "prev_buy": 20.0532,
-  "prev_sell": 19.2521
+  "sell": 20.15418,
+  "buy": 19.355,
+  "date": "2022-12-09 09:40:14",
+  "prev_buy": 20.06544,
+  "prev_sell": 19.2717
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -107,17 +107,17 @@
   "bank_name": "MONEX",
   "sell": 20.04,
   "buy": 19.53,
-  "date": "2022-12-09 09:20:15",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "date": "2022-12-09 09:40:15",
+  "prev_buy": 20.04,
+  "prev_sell": 19.53
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.2799,
-  "buy": 19.2694,
-  "date": "2022-12-09 09:00:16",
-  "prev_buy": 20.1776,
-  "prev_sell": 19.1671
+  "sell": 20.2656,
+  "buy": 19.2551,
+  "date": "2022-12-09 09:40:16",
+  "prev_buy": 20.182,
+  "prev_sell": 19.163
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.93392,
-  "buy": 19.1050725,
-  "date": "2022-12-08 17:40:25",
-  "prev_buy": 19.97456,
-  "prev_sell": 19.1440525
+  "sell": 20.075144,
+  "buy": 19.246375,
+  "date": "2022-12-09 09:40:20",
+  "prev_buy": 19.986752,
+  "prev_sell": 19.1635425
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.97316,
-  "buy": 19.1442825,
-  "date": "2022-12-08 17:40:25",
-  "prev_buy": 20.01388,
-  "prev_sell": 19.1833425
+  "sell": 20.114662,
+  "buy": 19.285875,
+  "date": "2022-12-09 09:40:21",
+  "prev_buy": 20.026096,
+  "prev_sell": 19.2028725
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.98297,
-  "buy": 18.9678375,
-  "date": "2022-12-08 17:40:26",
-  "prev_buy": 20.02371,
-  "prev_sell": 19.0065375
+  "sell": 20.1245415,
+  "buy": 19.108125,
+  "date": "2022-12-09 09:40:21",
+  "prev_buy": 20.035932,
+  "prev_sell": 19.0258875
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.941768,
-  "buy": 19.165848,
-  "date": "2022-12-08 17:40:26",
-  "prev_buy": 19.982424,
-  "prev_sell": 19.204952
+  "sell": 20.0830476,
+  "buy": 19.3076,
+  "date": "2022-12-09 09:40:22",
+  "prev_buy": 19.9946208,
+  "prev_sell": 19.224504
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.85544,
-  "buy": 18.97764,
-  "date": "2022-12-08 17:40:27",
-  "prev_buy": 19.89592,
-  "prev_sell": 19.01636
+  "sell": 19.996108,
+  "buy": 19.118,
+  "date": "2022-12-09 09:40:22",
+  "prev_buy": 19.908064,
+  "prev_sell": 19.03572
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.03202,
-  "buy": 18.761985,
-  "date": "2022-12-08 17:40:28",
-  "prev_buy": 20.07286,
-  "prev_sell": 18.800265
+  "sell": 20.173939,
+  "buy": 18.90075,
+  "date": "2022-12-09 09:40:23",
+  "prev_buy": 20.085112,
+  "prev_sell": 18.819405
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.99278,
-  "buy": 19.193295,
-  "date": "2022-12-08 17:40:28",
-  "prev_buy": 20.03354,
-  "prev_sell": 19.232455
+  "sell": 20.134421,
+  "buy": 19.33525,
+  "date": "2022-12-09 09:40:23",
+  "prev_buy": 20.045768,
+  "prev_sell": 19.252035
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.1105,
-  "buy": 18.8208,
-  "date": "2022-12-08 17:40:29",
-  "prev_buy": 20.1515,
-  "prev_sell": 18.8592
+  "sell": 20.252975,
+  "buy": 18.96,
+  "date": "2022-12-09 09:40:24",
+  "prev_buy": 20.1638,
+  "prev_sell": 18.8784
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.080089,
-  "buy": 19.1442825,
-  "date": "2022-12-08 17:40:29",
-  "prev_buy": 20.121027,
-  "prev_sell": 19.1833425
+  "sell": 20.22234855,
+  "buy": 19.285875,
+  "date": "2022-12-09 09:40:24",
+  "prev_buy": 20.1333084,
+  "prev_sell": 19.2028725
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.06145,
-  "buy": 19.1638875,
-  "date": "2022-12-08 17:40:30",
-  "prev_buy": 20.10235,
-  "prev_sell": 19.2029875
+  "sell": 20.2035775,
+  "buy": 19.305625,
+  "date": "2022-12-09 09:40:25",
+  "prev_buy": 20.11462,
+  "prev_sell": 19.2225375
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.06145,
-  "buy": 19.154085,
-  "date": "2022-12-08 17:40:30",
-  "prev_buy": 20.10235,
-  "prev_sell": 19.193165
+  "sell": 20.2035775,
+  "buy": 19.29575,
+  "date": "2022-12-09 09:40:25",
+  "prev_buy": 20.11462,
+  "prev_sell": 19.212705
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
